About us padding top on mobile fixing

--- a/css/style.scss
+++ b/css/style.scss
@@ -276,7 +276,7 @@ main{
 #aboutUsSection{
 
   @include respond-to('phone'){
-      padding-top: 0px;
+      padding-top: 15px;
   }
 
   .text.container{
